# alldebrid-wrapper

./: .gitignore  README.md  pyproject.toml
src/alldebrid_wrapper/: __init__.py  client.py  config.py  exceptions.py  response.py
src/alldebrid_wrapper/endpoints/: __init__.py  base.py  endpoints.py
src/alldebrid_wrapper/endpoints/private/: __init__.py  magnet.py  pin.py  reseller.py  url.py  user.py
src/alldebrid_wrapper/endpoints/public/: __init__.py  hosts.py  ping.py
