[project]
name = "alldebrid-wrapper"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Henrique Moreira", email = "github@henriquecoder.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "humanize>=4.15.0",
    "rich>=14.3.3",
]
lint = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
